adição de todos os procedimentos e footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
   <section class="hero container">
     <div class="hero-txt">
-      oioihheheh
       <h1 style="color: #2d2d2d;">Encontre a beleza que
         <br>
         reflete<br> quem você é de <br><span> verdade!</span>
@@ -53,7 +52,7 @@
   <div class="hero2">
     <!-- hero 2 = parte branca q os cartoes estao -->
     <section class="container">
-      <h1>Conheça nossos procedimentos estéticos:</h1>
+      <h1>Procedimentos mais procurados:</h1>
 
       <!-- cartao 1  -->
       <div class="card">
@@ -100,33 +99,113 @@
     </section>
 
 
-    <!-- <div class="sobre">
-        <section class="container">
-        <h2>Ozonioterapia, como funciona?</h2>
-        <h3>A sua incrível flexibilidade para aplicações fez com que a ozonioterapia se tornasse um terreno fértil, com
-          efeitos rápidos, nada invasivos e recuperação tranquila para o paciente.</h3>
-          </section>
-      </div>
- -->
   </div>
   <section class="container">
     <a href="#">
-<div class="sobre">
-    <div class="card">
-      <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
-      <div class="content">
-        <h2>Conheça mais sobre nossa clínica</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-          vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-          adipisci. Facere?</p>
+      <div class="sobre">
+        <div class="card">
+          <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
+          <div class="content">
+            <h2>Conheça mais sobre nossa clínica</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+              vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+              adipisci. Facere?</p>
+          </div>
+        </div>
+      </div>
+    </a>
+  </section>
+
+
+
+  <!-- todos os procedimentos -->
+
+  <section class="container">
+    <div class="projetos">
+      <h2>Todos os nossos procedimentos:</h2>
+      <div class="separacao">
+        <ul class="check-list">
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+        </ul>
+        <ul class="check-list">
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+        </ul>
+        <ul class="check-list">
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+        </ul>
+        <ul class="check-list">
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+        </ul>
+        <ul class="check-list">
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+          <li>lista</li>
+        </ul>
       </div>
     </div>
-  </div>
-</a>
   </section>
-  <footer id="footer" class="container">
+
+
+
+  <footer class="footer-distributed">
+
+    <div class="footer-right">
+
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-whatsapp"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
+      <a href="#"><i class="fa fa-github"></i></a>
+
+    </div>
+
+    <div class="footer-left">
+
+      <p class="footer-links">
+        <a class="link-1" href="#">Home</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+      </p>
+      <p>CPNJ: 27.046.234/0001-26</p>
+      <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
+      <p>Débora Lucio &copy; 2023</p>
+
+    </div>
 
   </footer>
+  <!-- </section> -->
 </body>
 
 </html>
