--- a/index.html
+++ b/index.html
@@ -3,124 +3,151 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- icones -->
   <script src="https://kit.fontawesome.com/48a96fe751.js" crossorigin="anonymous"></script>
-
+  <!-- css -->
   <link rel="stylesheet" href="assets/css/style.css">
+  <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Saira:wght@400;700&display=swap"
     rel="stylesheet">
+  <!-- midia query -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- icone -->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- titulo -->
   <title>Farmácia Estética</title>
+  <!-- descricao -->
   <meta name="description"
     content="Descubra o segredo para uma aparência radiante e confiante através dos nossos tratamentos exclusivos.">
 </head>
 
 <body>
+
   <!-- HEADER -->
-  <header class="container">
-    <a href="#default" class="logo" style="        display: flex; flex-direction: column;">
-      <div style="display: flex;">
-        <img src="assets/img/Débora Lúcio.PNG" alt="">
-        <span class="titulo">Farmacia <span style="color: #0360a1;">Estetica</span></span>
-      </div>
-      <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i
-          class="fa-brands fa-square-whatsapp"></i></i></span></span>
-    </a>
-    </a>
-    <!-- <div class="header-right">
+  <main>
+    <header>
+
+      <a href="#default" class="logo" style="        display: flex; flex-direction: column;">
+        <div style="display: flex;">
+          <img src="assets/img/Débora Lúcio.PNG" alt="">
+          <span class="titulo">Farmacia <span>Estetica</span></span>
+        </div>
+        <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i
+            class="fa-brands fa-square-whatsapp"></i></i></span></span>
+      </a>
+      </a>
+      <!-- <div class="header-right">
       <a class="active" href="#"> <span> Agende uma consulta</span></a>
 
     </div> -->
 
-  </header>
+    </header>
+  </main>
+  <main>
+    <div class="hero">
+      <div class="hero-txt">
+        <h1 style="color: #2d2d2d;">Encontre a beleza que
+          <br>
+          reflete<br> quem você é de <br><span> verdade!</span>
+        </h1>
+        <a href="" class="botao">Entre em contato</a>
+      </div>
+      <div class="hero-img">
+        <img src="./assets/img/undraw_mindfulness.png" alt="img">
+      </div>
+    </div>
+  </main>
 
-  <section class="hero container">
-    <div class="hero-txt">
-      <h1 style="color: #2d2d2d;">Encontre a beleza que
-        <br>
-        reflete<br> quem você é de <br><span> verdade!</span>
-      </h1>
-      <a href="" class="botao">Entre em contato</a>
-    </div>
-    <div class="hero-img">
-      <img src="./assets/img/undraw_mindfulness.png" alt="img">
-    </div>
+
+
+
+  <section class="col-100 main">
+    <main>
+
+      <h1>Procedimentos mais procurados:</h1>
+      <div class="cartoes">
+        
+        <div class="card">
+          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+          <div class="content">
+            <h2>Botox</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima fugiat praesentium quod porro
+              exercitationem quis blanditiis quos accusamus? Quae id odio neque excepturi quia aliquam, voluptate magni
+              voluptatum quaerat.</p>
+          </div>
+        </div>
+
+
+        <!-- cartao 2 -->
+        <div class="card">
+          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+          <div class="content">
+            <h2>Gordura localizada</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, neque! Nostrum repellendus ea
+              reprehenderit dicta voluptas totam laboriosam atque illum beatae deserunt provident quam tempore, culpa
+              reiciendis voluptatum ipsum minima.</p>
+          </div>
+        </div>
+
+        <!-- cartao 3 -->
+        <div class="card">
+          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+          <div class="content">
+            <h2>Celulite e Estrias</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, doloribus quae? Id obcaecati, nostrum
+              libero
+              repellat explicabo minima nam, omnis, eum ullam dolorum adipisci praesentium reprehenderit quos impedit
+              neque sapiente.</p>
+          </div>
+        </div>
+
+
+        <!-- cartao 4 -->
+        <div class="card">
+          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+          <div class="content">
+            <h2>Crescimento capilar</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+              vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+              adipisci. Facere?</p>
+          </div>
+        </div>
+
+      </div>
+    </main>
   </section>
 
-  <div class="hero2">
-    <!-- hero 2 = parte branca q os cartoes estao -->
-    <section class="container">
-      <h1>Procedimentos mais procurados:</h1>
-
-      <!-- cartao 1  -->
-      <div class="card">
-        <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-        <div class="content">
-          <h2>Botox</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima fugiat praesentium quod porro
-            exercitationem quis blanditiis quos accusamus? Quae id odio neque excepturi quia aliquam, voluptate magni
-            voluptatum quaerat.</p>
-        </div>
-      </div>
-      <!-- cartao 2 -->
-      <div class="card">
-        <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-        <div class="content">
-          <h2>Gordura localizada</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, neque! Nostrum repellendus ea
-            reprehenderit dicta voluptas totam laboriosam atque illum beatae deserunt provident quam tempore, culpa
-            reiciendis voluptatum ipsum minima.</p>
-        </div>
-      </div>
-      <!-- cartao 3 -->
-      <div class="card">
-        <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-        <div class="content">
-          <h2>Celulite e Estrias</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, doloribus quae? Id obcaecati, nostrum libero
-            repellat explicabo minima nam, omnis, eum ullam dolorum adipisci praesentium reprehenderit quos impedit
-            neque sapiente.</p>
-        </div>
-      </div>
-      <!-- cartao 4 -->
-      <div class="card">
-        <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-        <div class="content">
-          <h2>Crescimento capilar</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-            vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-            adipisci. Facere?</p>
-        </div>
-      </div>
-
-      <!-- ///fim dos cartoes  -->
-    </section>
+  <!-- ///fim dos cartoes  -->
 
 
-  </div>
-  <section class="container">
+
+
+
+  <!-- <div class="teste"> -->
+  <main>
     <a href="#">
       <div class="sobre">
         <div class="card">
           <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
           <div class="content">
             <h2>Conheça mais sobre nossa clínica</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+              molestiae
               vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
               adipisci. Facere?</p>
           </div>
         </div>
       </div>
     </a>
-  </section>
+  </main>
 
 
 
   <!-- todos os procedimentos -->
 
-  <section class="container">
+  <main>
     <div class="projetos">
       <h2>Todos os nossos procedimentos:</h2>
       <div class="separacao">
@@ -164,19 +191,12 @@
           <li>lista</li>
           <li>lista</li>
         </ul>
-        <ul class="check-list">
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-        </ul>
+
       </div>
     </div>
-  </section>
+  </main>
+
+
 
 
 
@@ -201,11 +221,12 @@
       <p>CPNJ: 27.046.234/0001-26</p>
       <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
       <p>Débora Lucio &copy; 2023</p>
-
+      </main>
     </div>
 
+
+
   </footer>
-  <!-- </section> -->
 </body>
 
 </html>
