--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Saira:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Saira:wght@400;700&display=swap" rel="stylesheet">
   <!-- midia query -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- icone -->
@@ -19,23 +18,21 @@
   <!-- titulo -->
   <title>Farmácia Estética</title>
   <!-- descricao -->
-  <meta name="description"
-    content="Descubra o segredo para uma aparência radiante e confiante através dos nossos tratamentos exclusivos.">
+  <meta name="description" content="Descubra o segredo para uma aparência radiante e confiante através dos nossos tratamentos exclusivos.">
 </head>
 
 <body>
 
-  <!-- HEADER -->
   <main>
-    <header>
 
+    <!-- HEADER -->
+    <header>
       <a href="#default" class="logo" style="        display: flex; flex-direction: column;">
         <div style="display: flex;">
           <img src="assets/img/Débora Lúcio.PNG" alt="">
           <span class="titulo">Farmacia <span>Estetica</span></span>
         </div>
-        <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i
-            class="fa-brands fa-square-whatsapp"></i></i></span></span>
+        <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i class="fa-brands fa-square-whatsapp"></i></i></span></span>
       </a>
       </a>
       <!-- <div class="header-right">
@@ -44,185 +41,239 @@
     </div> -->
 
     </header>
-  </main>
-  <main>
-    <div class="hero">
-      <div class="hero-txt">
-        <h1 style="color: #2d2d2d;">Encontre a beleza que
-          <br>
-          reflete<br> quem você é de <br><span> verdade!</span>
-        </h1>
-        <a href="" class="botao">Entre em contato</a>
-      </div>
-      <div class="hero-img">
-        <img src="./assets/img/undraw_mindfulness.png" alt="img">
-      </div>
-    </div>
-  </main>
 
-
-
-
-  <section class="col-100 main">
+    <!-- MAIN -->
     <main>
-
-      <h1>Procedimentos mais procurados:</h1>
-      <div class="cartoes">
-        
-        <div class="card">
-          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-          <div class="content">
-            <h2>Botox</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima fugiat praesentium quod porro
-              exercitationem quis blanditiis quos accusamus? Quae id odio neque excepturi quia aliquam, voluptate magni
-              voluptatum quaerat.</p>
+      <!-- HERO -->
+      <section id="hero">
+        <div class="hero">
+          <div class="hero-txt">
+            <h1 style="color: #2d2d2d;">Encontre a beleza que
+              <br>
+              reflete<br> quem você é de <br><span> verdade!</span>
+            </h1>
+            <a href="" class="botao">Entre em contato</a>
+          </div>
+          <div class="hero-img">
+            <img src="./assets/img/undraw_mindfulness.png" alt="img">
           </div>
         </div>
+      </section>
+
+    </main>
 
 
-        <!-- cartao 2 -->
-        <div class="card">
-          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-          <div class="content">
-            <h2>Gordura localizada</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, neque! Nostrum repellendus ea
-              reprehenderit dicta voluptas totam laboriosam atque illum beatae deserunt provident quam tempore, culpa
-              reiciendis voluptatum ipsum minima.</p>
+
+
+    <section class="col-100 main">
+      <main>
+
+        <h1>Procedimentos mais procurados:</h1>
+        <div class="cartoes">
+
+          <div class="card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="content">
+              <h2>Botox</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima fugiat praesentium quod porro
+                exercitationem quis blanditiis quos accusamus? Quae id odio neque excepturi quia aliquam, voluptate magni
+                voluptatum quaerat.</p>
+            </div>
+          </div>
+
+
+          <!-- cartao 2 -->
+          <div class="card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="content">
+              <h2>Gordura localizada</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, neque! Nostrum repellendus ea
+                reprehenderit dicta voluptas totam laboriosam atque illum beatae deserunt provident quam tempore, culpa
+                reiciendis voluptatum ipsum minima.</p>
+            </div>
+          </div>
+
+          <!-- cartao 3 -->
+          <div class="card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="content">
+              <h2>Celulite e Estrias</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, doloribus quae? Id obcaecati, nostrum
+                libero
+                repellat explicabo minima nam, omnis, eum ullam dolorum adipisci praesentium reprehenderit quos impedit
+                neque sapiente.</p>
+            </div>
+          </div>
+
+
+          <!-- cartao 4 -->
+          <div class="card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="content">
+              <h2>Crescimento capilar</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
+          </div>
+
+        </div>
+      </main>
+    </section>
+
+    <!-- ///fim dos cartoes  -->
+
+
+
+
+
+    <!-- <div class="teste"> -->
+    <main>
+      <a href="#">
+        <div class="sobre">
+          <div class="card">
+            <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
+            <div class="content">
+              <h2>Conheça mais sobre nossa clínica</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+                molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
           </div>
         </div>
+      </a>
+    </main>
 
-        <!-- cartao 3 -->
-        <div class="card">
-          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-          <div class="content">
-            <h2>Celulite e Estrias</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, doloribus quae? Id obcaecati, nostrum
-              libero
-              repellat explicabo minima nam, omnis, eum ullam dolorum adipisci praesentium reprehenderit quos impedit
-              neque sapiente.</p>
-          </div>
+
+
+    <!-- todos os procedimentos -->
+
+    <main>
+      <div class="projetos">
+        <h2>Todos os nossos procedimentos:</h2>
+        <div class="separacao">
+          <ul class="check-list">
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+          </ul>
+          <ul class="check-list">
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+          </ul>
+          <ul class="check-list">
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+          </ul>
+          <ul class="check-list">
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+            <li>lista</li>
+          </ul>
+
         </div>
-
-
-        <!-- cartao 4 -->
-        <div class="card">
-          <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-          <div class="content">
-            <h2>Crescimento capilar</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-              vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-              adipisci. Facere?</p>
-          </div>
-        </div>
-
       </div>
     </main>
-  </section>
 
-  <!-- ///fim dos cartoes  -->
-
-
-
-
-
-  <!-- <div class="teste"> -->
-  <main>
-    <a href="#">
-      <div class="sobre">
-        <div class="card">
-          <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
-          <div class="content">
-            <h2>Conheça mais sobre nossa clínica</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
-              molestiae
-              vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-              adipisci. Facere?</p>
-          </div>
-        </div>
+    <section id="mais-procurados" class="container">
+      <div class="mais-procurados-txt">
+        <h1>Procedimentos mais procurados</h1>
       </div>
-    </a>
-  </main>
+      <div>
+        <ul class="mais-procurados-cards">
+          <!-- CARD 1 -->
+          <li class="mais-procurados-card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="mais-procurados-card-txt">
+              <h2>Crescimento capilar</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
+          </li>
+          <li class="mais-procurados-card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="mais-procurados-card-txt">
+              <h2>Crescimento capilar</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
+          </li>
+
+          <!-- CARD 2 -->
+          <li class="mais-procurados-card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="mais-procurados-card-txt">
+              <h2>Crescimento capilar</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
+          </li>
+          <li class="mais-procurados-card">
+            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+            <div class="mais-procurados-card-txt">
+              <h2>Crescimento capilar</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
+                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                adipisci. Facere?</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
 
 
-  <!-- todos os procedimentos -->
 
-  <main>
-    <div class="projetos">
-      <h2>Todos os nossos procedimentos:</h2>
-      <div class="separacao">
-        <ul class="check-list">
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-        </ul>
-        <ul class="check-list">
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-        </ul>
-        <ul class="check-list">
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-        </ul>
-        <ul class="check-list">
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-          <li>lista</li>
-        </ul>
+
+    <footer class="footer-distributed">
+
+      <div class="footer-right">
+
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-whatsapp"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
 
       </div>
-    </div>
+
+      <div class="footer-left">
+
+        <p class="footer-links">
+          <a class="link-1" href="#">Home</a>
+          <a href="#">Sobre</a>
+          <a href="#">Contato</a>
+        </p>
+        <p>CPNJ: 27.046.234/0001-26</p>
+        <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
+        <p>Débora Lucio &copy; 2023</p>
   </main>
-
-
-
-
-
-  <footer class="footer-distributed">
-
-    <div class="footer-right">
-
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-whatsapp"></i></a>
-      <a href="#"><i class="fa fa-instagram"></i></a>
-      <a href="#"><i class="fa fa-github"></i></a>
-
-    </div>
-
-    <div class="footer-left">
-
-      <p class="footer-links">
-        <a class="link-1" href="#">Home</a>
-        <a href="#">Sobre</a>
-        <a href="#">Contato</a>
-      </p>
-      <p>CPNJ: 27.046.234/0001-26</p>
-      <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
-      <p>Débora Lucio &copy; 2023</p>
-      </main>
-    </div>
+  </div>
 
 
 
