organização do css e index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Saira:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Saira:wght@400;700&display=swap"
+    rel="stylesheet">
   <!-- midia query -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- icone -->
@@ -18,108 +19,132 @@
   <!-- titulo -->
   <title>Farmácia Estética</title>
   <!-- descricao -->
-  <meta name="description" content="Descubra o segredo para uma aparência radiante e confiante através dos nossos tratamentos exclusivos.">
+  <meta name="description"
+    content="Descubra o segredo para uma aparência radiante e confiante através dos nossos tratamentos exclusivos.">
 </head>
 
 <body>
 
+
+  <!-- HEADER -->
+  <header class="container">
+    <a href="#default" class="logo">
+      <div class="header-2">
+        <img src="assets/img/Débora Lúcio.PNG" alt="">
+        <span class="titulo">Farmacia <span>Estetica</span></span>
+      </div>
+      <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i
+          class="fa-brands fa-square-whatsapp"></i></i></span></span>
+    </a>
+    </a>
+  </header>
+  <!-- MAIN -->
   <main>
 
-    <!-- HEADER -->
-    <header>
-      <a href="#default" class="logo" style="        display: flex; flex-direction: column;">
-        <div style="display: flex;">
-          <img src="assets/img/Débora Lúcio.PNG" alt="">
-          <span class="titulo">Farmacia <span>Estetica</span></span>
+
+    <!-- HERO -->
+    <div class="container">
+      <section class="hero">
+
+        <div class="hero-txt">
+          <h1 style="color: #2d2d2d;">Encontre a beleza que
+            <br>
+            reflete<br> quem você é de <br><span> verdade!</span>
+          </h1>
+          <a href="" class="botao">Entre em contato</a>
         </div>
-        <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i class="fa-brands fa-square-whatsapp"></i></i></span></span>
-      </a>
-      </a>
-      <!-- <div class="header-right">
-      <a class="active" href="#"> <span> Agende uma consulta</span></a>
-
-    </div> -->
-
-    </header>
-
-    <!-- MAIN -->
-    <main>
-      <!-- HERO -->
-      <section id="hero">
-        <div class="hero">
-          <div class="hero-txt">
-            <h1 style="color: #2d2d2d;">Encontre a beleza que
-              <br>
-              reflete<br> quem você é de <br><span> verdade!</span>
-            </h1>
-            <a href="" class="botao">Entre em contato</a>
-          </div>
-          <div class="hero-img">
-            <img src="./assets/img/undraw_mindfulness.png" alt="img">
-          </div>
+        <div class="hero-img">
+          <img src="./assets/img/undraw_mindfulness.png" alt="img">
         </div>
+
       </section>
-
-    </main>
-
-
+    </div>
+    <!-- FINALIZADO -->
 
 
-    <section class="col-100 main">
-      <main>
 
-        <h1>Procedimentos mais procurados:</h1>
-        <div class="cartoes">
 
-          <div class="card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="content">
-              <h2>Botox</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima fugiat praesentium quod porro
-                exercitationem quis blanditiis quos accusamus? Quae id odio neque excepturi quia aliquam, voluptate magni
-                voluptatum quaerat.</p>
-            </div>
+
+    <div class="col-100 ">
+      <div class="container">
+        <section id="mais-procurados" class="container">
+
+          <div class="mais-procurados-txt">
+            <h1>Procedimentos mais procurados</h1>
           </div>
 
 
-          <!-- cartao 2 -->
-          <div class="card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="content">
-              <h2>Gordura localizada</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, neque! Nostrum repellendus ea
-                reprehenderit dicta voluptas totam laboriosam atque illum beatae deserunt provident quam tempore, culpa
-                reiciendis voluptatum ipsum minima.</p>
-            </div>
+          <div>
+            <ul class="mais-procurados-cards">
+
+              <!-- CARD 1 -->
+              <li class="card">
+                <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+                <div class="mais-procurados-card-txt">
+                  <div class="card-txt">
+                    <h2>Crescimento capilar</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+                      molestiae
+                      vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
+                      quam
+                      adipisci. Facere?</p>
+                  </div>
+                </div>
+              </li>
+
+
+
+
+
+              <li class="card">
+                <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+                <div class="mais-procurados-card-txt">
+                  <div class="card-txt">
+
+                    <h2>Crescimento capilar</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+                      molestiae
+                      vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
+                      quam
+                      adipisci. Facere?</p>
+                  </div>
+                </div>
+              </li>
+
+              <!-- CARD 2 -->
+              <li class="card">
+                <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+                <div class="mais-procurados-card-txt">
+                  <div class="card-txt">
+                    <h2>Crescimento capilar</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+                      molestiae
+                      vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
+                      quam
+                      adipisci. Facere?</p>
+                  </div>
+                </div>
+              </li>
+
+
+
+
+              <li class="card">
+                <img src="assets/img/sem-imagem.jpg" alt="Imagem">
+                <div class="card-txt">
+                  <h2>Crescimento capilar</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
+                    molestiae
+                    vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
+                    adipisci. Facere?</p>
+                </div>
+              </li>
+            </ul>
           </div>
+        </section>
+      </div>
+    </div>
 
-          <!-- cartao 3 -->
-          <div class="card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="content">
-              <h2>Celulite e Estrias</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, doloribus quae? Id obcaecati, nostrum
-                libero
-                repellat explicabo minima nam, omnis, eum ullam dolorum adipisci praesentium reprehenderit quos impedit
-                neque sapiente.</p>
-            </div>
-          </div>
-
-
-          <!-- cartao 4 -->
-          <div class="card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="content">
-              <h2>Crescimento capilar</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-                adipisci. Facere?</p>
-            </div>
-          </div>
-
-        </div>
-      </main>
-    </section>
 
     <!-- ///fim dos cartoes  -->
 
@@ -128,7 +153,7 @@
 
 
     <!-- <div class="teste"> -->
-    <main>
+    <section class="container">
       <a href="#">
         <div class="sobre">
           <div class="card">
@@ -143,13 +168,13 @@
           </div>
         </div>
       </a>
-    </main>
+    </section>
 
 
 
     <!-- todos os procedimentos -->
 
-    <main>
+    <section class="container">
       <div class="projetos">
         <h2>Todos os nossos procedimentos:</h2>
         <div class="separacao">
@@ -196,56 +221,9 @@
 
         </div>
       </div>
-    </main>
-
-    <section id="mais-procurados" class="container">
-      <div class="mais-procurados-txt">
-        <h1>Procedimentos mais procurados</h1>
-      </div>
-      <div>
-        <ul class="mais-procurados-cards">
-          <!-- CARD 1 -->
-          <li class="mais-procurados-card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="mais-procurados-card-txt">
-              <h2>Crescimento capilar</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-                adipisci. Facere?</p>
-            </div>
-          </li>
-          <li class="mais-procurados-card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="mais-procurados-card-txt">
-              <h2>Crescimento capilar</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-                adipisci. Facere?</p>
-            </div>
-          </li>
-
-          <!-- CARD 2 -->
-          <li class="mais-procurados-card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="mais-procurados-card-txt">
-              <h2>Crescimento capilar</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-                adipisci. Facere?</p>
-            </div>
-          </li>
-          <li class="mais-procurados-card">
-            <img src="assets/img/sem-imagem.jpg" alt="Imagem">
-            <div class="mais-procurados-card-txt">
-              <h2>Crescimento capilar</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem molestiae
-                vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
-                adipisci. Facere?</p>
-            </div>
-          </li>
-        </ul>
-      </div>
     </section>
+
+
 
 
 
