--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
     <a href="#default" class="logo">
       <div class="header-2">
         <img src="assets/img/Débora Lúcio.PNG" alt="">
-        <span class="titulo">Farmacia <span>Estetica</span></span>
+        <span class="titulo">Farmacia <span>Estetica</span>        
       </div>
-      <span class="subtitleh">Débora Lucio (19)9 9946-15211 <i
-          class="fa-brands fa-square-whatsapp"></i></i></span></span>
-    </a>
+      <span class="subtitleh">Débora Lucio (19) 9 9946-15211 <i
+        class="fa-brands fa-square-whatsapp"></i></span>
+   
+ 
     </a>
   </header>
-  <!-- MAIN -->
-  <main>
+
+
 
 
     <!-- HERO -->
@@ -59,11 +60,9 @@
 
       </section>
     </div>
-    <!-- FINALIZADO -->
 
 
-
-
+    <!-- catoes -->
 
     <div class="col-100 ">
       <div class="container">
@@ -72,7 +71,6 @@
           <div class="mais-procurados-txt">
             <h1>Procedimentos mais procurados</h1>
           </div>
-
 
           <div>
             <ul class="mais-procurados-cards">
@@ -152,9 +150,9 @@
 
 
 
-    <!-- <div class="teste"> -->
+<!-- sobre -->
     <section class="container">
-      <a href="#">
+      <a class="sobre" href="#">
         <div class="sobre">
           <div class="card">
             <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
@@ -250,7 +248,6 @@
         <p>CPNJ: 27.046.234/0001-26</p>
         <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
         <p>Débora Lucio &copy; 2023</p>
-  </main>
   </div>
 
 
