site adaptado para mobile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
 
-
+<!-- cartao 2 -->
               <li class="card">
                 <img src="assets/img/sem-imagem.jpg" alt="Imagem">
                 <div class="mais-procurados-card-txt">
@@ -109,7 +109,7 @@
                 </div>
               </li>
 
-              <!-- CARD 2 -->
+              <!-- CARD 3 -->
               <li class="card">
                 <img src="assets/img/sem-imagem.jpg" alt="Imagem">
                 <div class="mais-procurados-card-txt">
@@ -125,7 +125,7 @@
               </li>
 
 
-
+<!-- cartao 4 -->
 
               <li class="card">
                 <img src="assets/img/sem-imagem.jpg" alt="Imagem">
