--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="assets/img/Débora Lúcio.PNG" alt="">
         <span class="titulo">Farmacia <span>Estetica</span>        
       </div>
-      <span class="subtitleh">Débora Lucio (19) 9 9946-15211 <i
+      <span class="subtitleh">Débora Lucio (00) 0 0000-0000 <i
         class="fa-brands fa-square-whatsapp"></i></span>
    
  
@@ -80,7 +80,7 @@
                 <img src="assets/img/sem-imagem.jpg" alt="Imagem">
                 <div class="mais-procurados-card-txt">
                   <div class="card-txt">
-                    <h2>Crescimento capilar</h2>
+                    <h2>Botox</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
                       molestiae
                       vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
@@ -99,7 +99,7 @@
                 <div class="mais-procurados-card-txt">
                   <div class="card-txt">
 
-                    <h2>Crescimento capilar</h2>
+                    <h2>Gordura Localizada</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
                       molestiae
                       vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
@@ -114,7 +114,7 @@
                 <img src="assets/img/sem-imagem.jpg" alt="Imagem">
                 <div class="mais-procurados-card-txt">
                   <div class="card-txt">
-                    <h2>Crescimento capilar</h2>
+                    <h2>Estria e Celulite</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
                       molestiae
                       vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur
@@ -245,13 +245,10 @@
           <a href="#">Sobre</a>
           <a href="#">Contato</a>
         </p>
-        <p>CPNJ: 27.046.234/0001-26</p>
-        <p>Espirito santo do pinhal -SP-Av dos trabalhadores Nº10</p>
-        <p>Débora Lucio &copy; 2023</p>
+        <p>CPNJ: 00.000.000/0000-00</p>
+        <p>SP- São Paulo- endereço</p>
+        <p>Nome EMPRESA &copy; 2023</p>
   </div>
-
-
-
   </footer>
 </body>
 
