alterações session sobre para mobile

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
 <!-- sobre -->
     <section class="container">
       <a class="sobre" href="#">
-        <div class="sobre">
-          <div class="card">
+        <div class="sobre-card">
+    
             <img src="assets/img/debora-2-removebg-preview.png" alt="Imagem">
-            <div class="content">
+            <div class="sobre-card-txt">
               <h2>Conheça mais sobre nossa clínica</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsa tempore porro magni sunt rem
                 molestiae
                 vitae eius unde? Recusandae veritatis fugiat, provident corrupti assumenda corporis aspernatur quam
                 adipisci. Facere?</p>
-            </div>
+           
           </div>
         </div>
       </a>
